[css][xs]: align the search box and login on the right (it's been bugging me!).

--- a/_attachments/themes/commentonit/style.css
+++ b/_attachments/themes/commentonit/style.css
@@ -32,6 +32,10 @@
   width:auto;
 }
 
+#login-and-search {
+  text-align: right;
+}
+
 /* edit form */
 
 form.doc-edit input, form.doc-edit textarea {
